--- a/src/ecmascript.tex
+++ b/src/ecmascript.tex
@@ -23,6 +23,13 @@
 
 ES6的第一个版本，就这样在2015年6月发布了，正式名称就是《ECMAScript 2015标准》（简称ES2015）。2016年6月，小幅修订的《ECMAScript 2016标准》（简称ES2016）如期发布，这个版本可以看作是ES6.1版，因为两者的差异非常小（只新增了数组实例的includes方法和指数运算符），基本上是同一个标准。根据计划，2017年6月将发布ES2017标准。
 
+\begin{compactitem}
+\item ES6-ES 2015
+\item ES6.1-ES 2016
+\end{compactitem}
+
+
+
 因此，ES6既是一个历史名词，也是一个泛指，含义是5.1版以后的JavaScript的下一代标准，涵盖了ES2015、ES2016、ES2017等等，而ES2015则是正式名称，特指该年发布的正式版本的语言标准。“ES6”一般是指ES2015标准，但有时也是泛指“下一代JavaScript语言”。
 
 
